--- a/economy.ipynb
+++ b/economy.ipynb
@@ -2351,19 +2351,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SVM with linear kernel\n",
-    "svm = SVC(kernel=\"linear\", probability=True, random_state=42)\n",
-    "svm.fit(X_train, y_train)\n",
-    "y_pred = svm.predict(X_test)\n",
-    "print(\"SVM:\\n\", classification_report(y_test, y_pred))\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "linear_svm = LinearSVC(random_state=42, max_iter=5000)\n",
+    "linear_svm.fit(X_train, y_train)\n",
     "\n",
     "svm_importance = pd.DataFrame({\n",
     "    \"Feature\": features,\n",
-    "    \"Coefficient\": svm.coef_[0],\n",
-    "    \"Abs_Importance\": np.abs(svm.coef_[0])\n",
+    "    \"Coefficient\": linear_svm.coef_[0],\n",
+    "    \"Abs_Importance\": np.abs(linear_svm.coef_[0])\n",
     "}).sort_values(by=\"Abs_Importance\", ascending=False)\n",
     "\n",
-    "svm_importance\n"
+    "print(svm_importance)\n",
+    "\n"
    ]
   },
   {
