--- a/Final_product.ipynb
+++ b/Final_product.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e640272a",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f200ae17",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "be117543",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ab8289b5",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "13a2b6aa",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9d940258",
    "metadata": {},
    "outputs": [
@@ -1216,11 +1216,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ningw\\AppData\\Local\\Temp\\ipykernel_33492\\4061259389.py:9: FutureWarning: The default fill_method='pad' in Series.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
+      "C:\\Users\\ningw\\AppData\\Local\\Temp\\ipykernel_19268\\4061259389.py:9: FutureWarning: The default fill_method='pad' in Series.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
       "  (df_pivot.groupby(\"Country\")[\"NGDPRPC\"].transform(lambda x: x.pct_change() < 0)) &\n",
-      "C:\\Users\\ningw\\AppData\\Local\\Temp\\ipykernel_33492\\4061259389.py:10: FutureWarning: The default fill_method='pad' in Series.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
+      "C:\\Users\\ningw\\AppData\\Local\\Temp\\ipykernel_19268\\4061259389.py:10: FutureWarning: The default fill_method='pad' in Series.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
       "  (df_pivot.groupby(\"Country\")[\"NGDPRPC\"].transform(lambda x: x.pct_change().shift(-1) < 0))\n",
-      "C:\\Users\\ningw\\AppData\\Local\\Temp\\ipykernel_33492\\4061259389.py:32: FutureWarning: The default fill_method='pad' in Series.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
+      "C:\\Users\\ningw\\AppData\\Local\\Temp\\ipykernel_19268\\4061259389.py:32: FutureWarning: The default fill_method='pad' in Series.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
       "  (df_pivot.groupby(\"Country\")[\"NGDPRPC\"].transform(lambda x: x.pct_change() < 0))\n"
      ]
     },
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ae62ddcd",
    "metadata": {},
    "outputs": [
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "422b2731",
    "metadata": {},
    "outputs": [
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "14d14c9a",
    "metadata": {},
    "outputs": [
@@ -2232,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c339905f",
    "metadata": {},
    "outputs": [
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "364d1ffb",
    "metadata": {},
    "outputs": [
@@ -2597,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3382119f",
    "metadata": {},
    "outputs": [],
@@ -2626,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2e8774c1",
    "metadata": {},
    "outputs": [],
@@ -2833,16 +2833,15 @@
     "        precision = results_df.loc[name, \"Precision\"]\n",
     "        recall = results_df.loc[name, \"Recall\"]\n",
     "        f1 = results_df.loc[name, \"F1\"]\n",
-    "    from sklearn.metrics import ConfusionMatrixDisplay\n",
     "\n",
-    "    n_models = len(confusion_mats)\n",
-    "    fig, axes = plt.subplots(1, n_models, figsize=(5*n_models, 5))\n",
+    "        # Add title with model name + metrics\n",
+    "        ax.set_title(\n",
+    "            f\"{name}\\nAcc={accuracy:.2f}, Prec={precision:.2f}, Rec={recall:.2f}, F1={f1:.2f}\",\n",
+    "            fontsize=12\n",
+    "        )\n",
     "\n",
-    "    if n_models == 1:\n",
-    "        axes = [axes]\n",
-    "\n",
-    "    for ax, (name, cm) in zip(axes, confusion_mats.items()):\n",
-    "        disp = ConfusionMatrixDisplay(confusion_matrix=cm)"
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -2855,7 +2854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9d2cf4d2",
    "metadata": {},
    "outputs": [],
@@ -2867,7 +2866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "355300d2",
    "metadata": {},
    "outputs": [
@@ -2970,7 +2969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "107301e9",
    "metadata": {},
    "outputs": [
@@ -3012,7 +3011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "13bbea18",
    "metadata": {},
    "outputs": [
@@ -3034,7 +3033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c9cba79c",
    "metadata": {},
    "outputs": [
@@ -3083,7 +3082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "95e89390",
    "metadata": {},
    "outputs": [
@@ -3124,7 +3123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d8430911",
    "metadata": {},
    "outputs": [
@@ -3223,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8a986416",
    "metadata": {},
    "outputs": [
@@ -3544,7 +3543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "03096565",
    "metadata": {},
    "outputs": [
@@ -3873,7 +3872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "aa9e6b75",
    "metadata": {},
    "outputs": [
@@ -4108,7 +4107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "19751b1f",
    "metadata": {},
    "outputs": [
@@ -4238,7 +4237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "24ecfe97",
    "metadata": {},
    "outputs": [
@@ -4333,7 +4332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "a25f6b34",
    "metadata": {},
    "outputs": [
@@ -4468,7 +4467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ff38534b",
    "metadata": {},
    "outputs": [
