--- a/Final_product.ipynb
+++ b/Final_product.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0881101a",
    "metadata": {},
    "outputs": [],
@@ -41,6 +41,7 @@
     "from sklearn.model_selection import train_test_split, TimeSeriesSplit\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
     "# Machine learning - models\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -59,7 +60,8 @@
     "    recall_score, \n",
     "    f1_score, \n",
     "    roc_auc_score,\n",
-    "    confusion_matrix\n",
+    "    confusion_matrix,\n",
+    "    ConfusionMatrixDisplay\n",
     ")\n",
     "\n",
     "# Imbalanced learning\n",
