remove unneeded code

--- a/Final_product.ipynb
+++ b/Final_product.ipynb
@@ -3531,7 +3531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a269a6cb",
    "metadata": {},
    "outputs": [
@@ -3742,10 +3742,7 @@
     "\n",
     "print(\"Created economy-specific prediction DataFrames from df_predict_original:\")\n",
     "print(f\" - Lower_Economies predictions: {len(df_predict_lower)} rows\")\n",
-    "print(f\" - Upper_Economies predictions: {len(df_predict_upper)} rows\")\n",
-    "\n",
-    "df_predict_lower.head()\n",
-    "df_predict_upper.head()"
+    "print(f\" - Upper_Economies predictions: {len(df_predict_upper)} rows\")"
    ]
   },
   {
